--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,6 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 50vh;
 }
 
 .App-header {
@@ -20,19 +10,31 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 600;
+  font-size: 0.7rem;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.card-header-title {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 5px;
+  color: rgb(115, 81, 36);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .card-content {
+  margin-top: 0;
+} */
+.pingimg {
+  background-image: url("pingpong.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 180px;
+}
+.container1 {
+  border: 2px solid rgb(163, 141, 141);
+  padding: 25px;
+  border-radius: 10px;
 }
