--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,8 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 600;
   font-size: 1.5rem;
-  margin-top: 0;
-  margin-bottom: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   color: rgb(115, 81, 36);
 }
 
